Fixed overlap on song title

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,7 +71,7 @@ a.title {
 
 .post-title a{
     font-size: 1.25rem;
-    padding: 10px;
+    padding: 2.5px;
     margin-bottom: 0.5rem;
     font-weight: 500;
     line-height: 1.5;
